# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "openenv-satellite_env"
version         = "0.1.0"
description     = "6-DOF Satellite Docking Environment for OpenEnv"
requires-python = ">=3.10"
dependencies    = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pybullet",
    "pydantic>=2.0.0",
    "numpy",
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

# ── Entry points ──────────────────────────────────────────────────────────────
# "server" script calls server/app.py:main() with zero arguments.
# This is what the OpenEnv multi-mode deployment validator checks.
# Usage: uv run --project . server
[project.scripts]
server = "server.app:main"

# ── Package discovery ─────────────────────────────────────────────────────────
# The project root is treated as the "satellite_env" package so that
# models.py, client.py, inference.py are importable as top-level modules.
[tool.setuptools.packages.find]
where   = ["."]
include = ["server*"]

[tool.setuptools.package-dir]
""       = "."